Changelog
=========


1.3.2 (unreleased)
------------------

- Mopage endpoint: remove web_url-tag as it is ambiguous. [jone]

- Improve mopage body by using simple HTML. [jone]

- Use simplelayout by default for news folders. [jone]


1.3.1 (2016-09-19)
------------------

- Fix encoding error in mopage. [jone]


1.3.0 (2016-09-13)
------------------

- Implement mopage news trigger behavior. [jone]


1.2.0 (2016-09-07)
------------------

- Fix plone first heading of news listing view on various portal
  types. [mbaechtold]

- Implement "mopage.news.xml" API browser view. [jone]

- Enable IExcludeFromNavigation behavior for news folders. [jone]

- Enable IPublication behavior for news. [jone]


1.1.5 (2016-07-07)
------------------

- Add a wrapper class to the news footer action on the news listing block.
  The news listing portlte allready has one. This makes styling the actions more easier.
  [mathias.leimgruber]


1.1.4 (2016-05-20)
------------------

- Adjusts the formatting of the date and time displayed on the page of a news item.
  Time doesn't show up if it is set to 00:00.
  [raphael-s]

- Archive portlet now respects the config of NewsListingBlock or NewsListing Portlet.
  [mathias.leimgruber]

- Use the query provided by the view for the archive portlet.
  [mathias.leimgruber]

- Call news_listing view on NewsListingBlock and optain query from block for news listing.
  [mathias.leimgruber]


1.1.3 (2016-04-20)
------------------

- Adjusts the date and time displayed for each news item in a news folder.
  Doesnt show time if there is no time set.
  [raphael-s]

- Adds a profile which installs an additional feature allowing to
  mark news item to be shown on the homepage (if the news listing block
  is configured to do so).
  [mbaechtold]


1.1.2 (2016-04-11)
------------------

- Fix the link in the RSS feed (link to parent instead of the feed itself).
  [mbaechtold]

- The news listing block renders news items the same way as the news portlet