@@ -5,6 +5,8 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
+- Mopage trigger: trigger on any update of the news. [jone]
+
 - Mopage endpoint: remove web_url-tag as it is ambiguous. [jone]
 
 - Improve mopage body by using simple HTML. [jone]
